# Quantum-Structure-Diagrams

./: .gitignore  HLD_Examples_Detailed.ipynb  HLD_VQE_H2_QSD.ipynb  LICENSE  QSD_VQE_H2_Workflow.ipynb  README.md  citation.cff  figure.py  hld_demo_notebook.py  pyproject.toml
figures/: ghz_hld_light_metrics.json  ghz_qsd_light_metrics.json  haar3_hld_light_metrics.json  haar3_qsd_light_metrics.json  psi_minus_bell_hld_light_metrics.json  psi_minus_bell_qsd_light_metrics.json  qutrit_bell_hld_light_metrics.json  qutrit_bell_qsd_light_metrics.json  w_hld_light_metrics.json
figures/appendix_example/: w_qsd_light_metrics.json
figures/artifacts/ex_1/: A1_Rx_H_metrics.json  A2_RxRz_H_metrics.json  A3_RxRzRx_H_metrics.json
figures/artifacts/ex_2/: Example_2_H2_simple_metrics.json
figures/artifacts/ex_3/: A_n_local_H2_4q_metrics.json  B_excitation_preserving_H2_4q_metrics.json
hld/: __init__.py  core.py  from_qiskit.py  metrics.py  plot.py
qsd/: __init__.py  core.py  dimensions.py  metrics.py  plot.py
tests/: test_ghz.py  test_known_states.py  test_random.py  test_w.py
